--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ cache:
         - "$HOME/.composer/cache"
 
 install:
-  - npm install
+  - npm install retire --save-dev
+  - npm install jshint -save-dev
+  - npm install twly --save-dev
 
 script:
   - jshint ./
